# gmupload

./: Cargo.toml  Dioxus.toml  README.md
src/: components.rs  facebook.rs  main.rs  models.rs  post_template.rs  wordpress.rs
src/components/: category_column.rs  post_button.rs
wordpress/: README.md  gmupload-api.php
